[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "Byzantium"
version = "0.1.0"
description = "Terminal entrypoint for Byzantium"
dependencies = [
    "cryptography",
]

[project.scripts]
Byzantium = "Byzantium:main"

[tool.setuptools]
py-modules = ["Byzantium"]

[tool.setuptools.packages.find]
where = ["."]
include = ["Game*"]
exclude = ["DeBug*"]
